Added Integration tests
